<resources>
    <string name="app_name">行知影单</string>
    <string name="subscribe">剧情简介</string>
    <string name="actor">影人</string>
    <string name="comment">短评</string>
    <string name="type">分类查看</string>
    <string name="guessYouLike">猜你喜欢</string>
    <string name="top250">豆瓣Top250</string>
    <string name="newMovie">新片榜</string>
    <string name="us_box">北美票房榜</string>
    <string name="weekly">本周热门</string>
    <string name="please_select">请选择</string>
    <string name="movieYear">年代</string>
    <string name="movieType">类型</string>
    <string name="movieLanguage">语言</string>
    <string name="userYear">年龄</string>
    <string name="userStudy">学历</string>
    <string name="advantage">冒险</string>
    <string name="science">科幻</string>
    <string name="chinese">中国</string>
    <string name="Korea">韩国</string>
    <string name="west">欧美</string>
    <string name="japan">日本</string>
    <string name="story">剧情</string>
    <string name="xuanyi">悬疑</string>
    <string name="afraid">恐怖</string>
    <string name="love">爱情</string>
    <string name="happy">喜剧</string>
    <string name="action">动作</string>
    <string name="username">账户</string>
    <string name="rating">0.0</string>
    <string name="password">密码</string>
    <string name="sex">性别</string>
    <string name="register">注册</string>
    <string name="save">保存</string>
    <string name="selectPhoto">选择你要的头像</string>
    <string name="id">id</string>
    <string name="quitLogin">退出登录</string>
    <string name="myCollect">&#160;&#160;&#160;&#160;我的收藏</string>
    <string name="movieCount">&#160;&#160;&#160;&#160;电影统计</string>
    <string name="userCount">&#160;&#160;&#160;&#160;用户统计</string>
    <string name="changePhoto">&#160;&#160;&#160;&#160;更换头像</string>
    <string name="history">&#160;&#160;&#160;&#160;浏览记录</string>
    <string name="havenotLogin">未登录</string>
    <string name="login">登录</string>
    <string name="loading">正在加载...</string>
    <string name="bottom">我是有底线的</string>
    <string name="passwordConfirm">确认密码</string>
</resources>
